# stm32

./: .gitattributes  .gitignore  Cargo.toml  Embed.toml  README.md  deny.toml  flake.nix  memory.x  rust-analyzer.toml
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: feedback.rs  fixed.rs  joint.rs  lib.rs  math.rs  motion.rs  servo.rs  temp_convert.rs
crates/firmware/: Cargo.toml  build.rs
crates/firmware/src/: main.rs
src/: main.rs  temp_convert.rs
