[package]
name = "stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

defmt = "0.3.8"
defmt-rtt = "0.4.1"

embassy-executor = { version = "0.6.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "integrated-timers",
  "defmt",
] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = [
  "stm32f407vg",
  "time-driver-any",
  "exti",
  "defmt",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }

panic-probe = "0.3.2"

[profile.release]
debug = 2
