[package]
name = "stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

defmt = "0.3.8"
defmt-rtt = "0.4.1"

embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "embassy-time-driver",
  "defmt",
] }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.6.0", features = [
  "stm32f407vg",
  "time-driver-any",
  "exti",
  "defmt",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }

panic-probe = "0.3.2"

verus_builtin = { git = "https://github.com/verus-lang/verus", rev = "cd0350583e528acb7367d56dc0e5a23f6336fe63" }
verus_builtin_macros = { git = "https://github.com/verus-lang/verus", rev = "cd0350583e528acb7367d56dc0e5a23f6336fe63" }

[profile.release]
debug = 2
